--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -65,7 +65,10 @@
         tools:layout="@layout/fragment_billing_details">
         <action
             android:id="@+id/action_billingDetailsFragment_to_orderConfirmationFragment"
-            app:destination="@id/orderConfirmationFragment" />
+            app:destination="@id/orderConfirmationFragment"
+            app:popUpTo="@id/mainFragment"
+            app:popUpToInclusive="true"
+            app:launchSingleTop="true"/>
     </fragment>
     <fragment
         android:id="@+id/orderConfirmationFragment"
