--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,11 +10,27 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.65">
-        <fragment
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment" />
+            android:layout_height="match_parent">
+            <fragment
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_current_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/dim_10_dp"
+                android:src="@drawable/ic_current_location"
+                app:backgroundTint="@color/white"
+                android:clickable="true"
+                app:fabSize="mini"/>
+        </FrameLayout>
+
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
