--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,4 +37,6 @@
         <item name="android:maxLines">1</item>
     </style>
 
+    <style name="Permissions.TransparentTheme" parent="android:Theme.Light" />
+
 </resources>
