--- a/app/src/main/res/layout/fragment_bid_confirmation.xml
+++ b/app/src/main/res/layout/fragment_bid_confirmation.xml
@@ -8,6 +8,7 @@
     android:gravity="center_horizontal">
 
     <ImageView
+        android:id="@+id/img_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dim_100_dp"
